2004-02-07  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* GraphicsPathIterator.cs: Fixed signature, added TODOs
	* Matrix.cs: Removed additional method

2004-02-06  Ravindra <rkumar@novell.com>

	* HatchBrush.cs: Using CheckStatus method instead of
	GetException.

2004-02-05  Ravindra <rkumar@novell.com>

	* HatchBrush.cs: Implemented.
	* HatchStyle.cs: Corrected enum values. Changed file format
	from DOS to UNIX.

2004-01-30  Duncan Mak  <duncan@ximian.com>

	* GraphicsPath.cs (AddPie): Corrected arguments sent to
	P/Invoke. This fixes the strange NaNs we were getting when we
	tried to draw Paths with a Pie figure.

2004-01-24  Duncan Mak  <duncan@ximian.com>

	* GraphicsPath.cs (AddEllipse): Added.

2004-01-19  Duncan Mak  <duncan@ximian.com>

	* GraphicsPath.cs: Implemented. Still needs testing, though.
	Particular the PathPoints property, I ran into a P/Invoke problem,
	I need to first fix that before I can go on with the rest of the testing.

2004-01-13  Ravindra  <rkumar@novell.com>

	* Matrix.cs: Made the Matrix(IntPtr) constructor internal.
	Because default access is private, that makes it unusable
	by other classes.

2004-01-11  Duncan Mak  <duncan@ximian.com>

	* Matrix.cs (Matrix): Removed reference to GpRect/GpRectF.

2004-01-10  Ravindra  <rkumar@novell.com>

	* All Enums: Made serializable.

	* GraphicsPathIterator.cs: Implements IDisposable.

	* GraphicsState.cs: Inherits MarshalByRefObject.

2003-12-25  Duncan Mak  <duncan@ximian.com>

	* Matrix.cs (ToString): Cache the elements inside a local variable
	to avoid calling the Elements property repeatedly.

2003-12-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Blend.cs: fix array sizes in the constructors. Closes bug #51564.
	System.Web moves in mysterious ways.

2003-11-22  Duncan Mak  <duncan@ximian.com>

	* Matrix.cs: Rewrote to use GDI+ implementation, doing all the
	math in unmanaged code instead of doing it in C#.

2003-11-04  Miguel de Icaza  <miguel@ximian.com>
