@@ -1,3 +1,8 @@
+2004-02-11  Ravindra <rkumar@novell.com>
+
+	* Matrix.cs: Added status checks using 
+	GDIPlus.CheckStatus(Status) method.
+
 2004-02-07  Andreas Nahr <ClassDevelopment@A-SoftTech.com>
 
 	* GraphicsPathIterator.cs: Fixed signature, added TODOs
